--- a/models/thailand/thaitg_integration/mt/_sources_thaitg_integration__mt.yml
+++ b/models/thailand/thaitg_integration/mt/_sources_thaitg_integration__mt.yml
@@ -43,7 +43,7 @@ sources:
                 store_failures: true
                 schema: thawks_integration
     
-    - name: sdl_th_mt_watsons_pos
+    - name: sdl_th_mt_watsons_pos_1210_UAT
       tags: ["tesco_mt_7_11_and_tops","ingestion"]
       tests:
         - test_null:
