--- a/models/thailand/thaitg_integration/_sources_thaitg_integration__test.yml
+++ b/models/thailand/thaitg_integration/_sources_thaitg_integration__test.yml
@@ -162,4 +162,5 @@ sources:
     - name: TRATBL_sdl_th_sfmc_sent_data__null_test
     - name: TRATBL_sdl_th_sfmc_sent_data__duplicate_test
     - name: TRATBL_sdl_th_sfmc_sent_data__lookup_test
-    
+    - name: TRATBL_sdl_th_watsons_weekly_pos__null_test
+    - name: TRATBL_sdl_th_watsons_weekly_pos__duplicate_test
