--- a/models/japan_dcl/jpndcledw_integration/edw/_jpndcledw_integration__edw.yml
+++ b/models/japan_dcl/jpndcledw_integration/edw/_jpndcledw_integration__edw.yml
@@ -1142,17 +1142,8 @@ models:
   - name: jpndcledw_integration__dm_dcl_sales_mon_w_target
     config:
       alias: '"dcl_sales_mon_w_target"'
-      # tags: ["m_dcl_edw_job3","transformation"]
+      # tags: ["japan_dcl_edw_job3","transformation"]
     columns:
-      - name: GTS_YOY
-        tests:
-          - not_null
-
-  - name: jpndcledw_integration__dm_dcl_mon_net_sales_comp
-    config:
-      alias: '"dcl_mon_net_sales_comp"'
-      # tags: ["japan_dm_dcl_edw_job3","transformation"]
-    columns:
-      - name: "updated_by"
+      - name: MONTH_ID
         tests:
           - not_null
