added models for A930, A915 tables

--- a/models/asp_regional/aspitg_integration/sap_and_sellin/_sources_aspitg_integration__sap_and_sellin.yml
+++ b/models/asp_regional/aspitg_integration/sap_and_sellin/_sources_aspitg_integration__sap_and_sellin.yml
@@ -134,6 +134,8 @@ sources:
       identifier: false
     tables: 
       - name: apc_a902
+      - name: apc_a915
+      - name: apc_a930      
       - name: apc_mvke
       - name: apc_konp
       - name: apc_knvv
