Add SDL to ITG jp_dcl_sales_target

--- a/models/japan_dcl/jpndcledw_integration/edw/_jpndcledw_integration__edw.yml
+++ b/models/japan_dcl/jpndcledw_integration/edw/_jpndcledw_integration__edw.yml
@@ -1142,7 +1142,7 @@ models:
   - name: jpndcledw_integration__dm_d2c_mon_key_cohort_met
     config:
       alias: dm_d2c_mon_key_cohort_met
-#      tags: ["m_dcl_edw_job3", "transformation"]  
+      tags: ["m_dcl_edw_job3", "transformation"]  
     columns:
       - name: MONTH_ID
         tests:
@@ -1153,7 +1153,7 @@ models:
   - name: jpndcledw_integration__dm_d2c_mon_purchase_fnl
     config:
       alias: dm_d2c_mon_purchase_fnl
-#      tags: ["m_dcl_edw_job3", "transformation"]  
+      tags: ["m_dcl_edw_job3", "transformation"]  
     columns:
       - name: MONTH_ID
         tests:
@@ -1161,8 +1161,13 @@ models:
   - name: jpndcledw_integration__dm_d2c_cohort_perf_review
     config:
       alias: dm_d2c_cohort_perf_review
-#      tags: ["m_dcl_edw_job3", "transformation"]  
+      tags: ["m_dcl_edw_job3", "transformation"]  
     columns:
       - name: MONTH_ID
         tests:
-          - not_null  	  		          
+          - not_null 
+          
+  - name: jpndcledw_integration__edw_mds_jp_dcl_sales_target
+    config:
+      alias: dcl_sales_target
+      tags: ["m_dcl_edw_job2", "transformation"]      
