created sql files for net sales decomposition dashboard and updated access__view.yml and integration__edw.yml files

--- a/models/japan_dcl/jpndcledw_access/view/_jpndcledw_access__view.yml
+++ b/models/japan_dcl/jpndcledw_access/view/_jpndcledw_access__view.yml
@@ -269,4 +269,10 @@ models:
   - name: jpndcledw_access__dm_dcl_sales_mon_w_target
     config:
       alias: '"dm_dcl_sales_mon_w_target"'
-      tags: ["japan_dcl_views","inactive"]      
+      tags: ["japan_dcl_views","inactive"]   
+
+
+  - name: jpndcledw_access__dm_dcl_mon_net_sales_comp
+    config:
+      alias: '"dm_dcl_mon_net_sales_comp"'
+      tags: ["japan_dcl_views","inactive"] 
