--- a/models/japan_dcl/jpndclitg_integration/itg/_sources_jpndclitg_integration__itg.yml
+++ b/models/japan_dcl/jpndclitg_integration/itg/_sources_jpndclitg_integration__itg.yml
@@ -37,6 +37,7 @@ sources:
       - name: sdl_mds_jp_dcl_partner_master
       - name: sdl_mds_jp_dcl_product_master    
       - name: sdl_mds_jp_dcl_targets
+      - name: SDL_MDS_JP_DCL_Targets_ADFTemp
       - name: sdl_mds_jp_dcl_mt_h_product   
       - name: c_tbecinquiremeisai
       - name: c_tbeckesai
