--- a/models/hcp/hcpitg_integration/detailing_data/_hcpitg_integration__detailing_data.yml
+++ b/models/hcp/hcpitg_integration/detailing_data/_hcpitg_integration__detailing_data.yml
@@ -9,3 +9,15 @@ models:
     config:
       alias: itg_hcp360_in_ventasys_detailingdata
       tags: ["in_ventasys_load","ingestion"]
+  - name: hcpitg_integration__itg_hcp360_in_detailing_va_hcp_join
+    config:
+      alias: itg_hcp360_in_detailing_va_hcp_join
+      tags: ["in_edetailing_load","ingestion"]
+  - name: hcpitg_integration__itg_hcp360_in_region_filter_hcp
+    config:
+      alias: itg_hcp360_in_region_filter_hcp
+      tags: ["in_edetailing_load","ingestion"]
+  - name: hcpitg_integration__itg_hcp360_in_dcr_hcp_region_join
+    config:
+      alias: itg_hcp360_in_dcr_hcp_region_join
+      tags: ["in_edetailing_load","ingestion"]
