--- a/models/hcp/hcpitg_integration/detailing_data/_sources_hcpitg_integration__detailing_data.yml
+++ b/models/hcp/hcpitg_integration/detailing_data/_sources_hcpitg_integration__detailing_data.yml
@@ -12,6 +12,6 @@ sources:
     - name: sdl_hcp360_in_ventasys_detailingdata
       tags: ["in_ventasys_load","ingestion"]
     - name: sdl_hcp360_in_ventasys_edetailing_raw
-      tags: ["in_ventasys_load","ingestion"]
+      tags: ["in_edetailing_load","ingestion"]
     - name: sdl_hcp360_in_ventasys_va_page_raw
-      tags: ["in_ventasys_load","ingestion"]
+      tags: ["in_edetailing_load","ingestion"]
